# MyProjects

./: README.md
ComputerVision_ImageClassifier/: CustomModel_cats.ipynb  README.md  ResNet50_cats.ipynb
Crypto_PULP/tests/dma/1d/: test.c
Crypto_PULP/tests/dma/dma_test/: test.c
Crypto_PULP/tests/test_FC_Cluster_sync/: test.c
Labview/: FSM_finalproject_latest.vi  README.md
Opamp_Project_LTSpice/: FULL2024.cir  OPAMPF2022.asy  README.md  opamp_commonmode.asc  opamp_dynamicbehaviour.asc  opamp_noise.asc  opamp_outswing.asc
SI_CNN_Training_and_Deployment/: README.md
SI_CNN_Training_and_Deployment/SI_CNN_GAP9/: AE_1dcnn_RELU.onnx  SydId_Labtest_late.npy  SysId_test.npy  Training.ipynb
SI_CNN_Training_and_Deployment/SI_CNN_GAP9/AE_CNN/: AE_1dcnn_RELU.c  AE_1dcnn_RELU.h  CMakeLists.txt  NNTool.py  gen_AE_1dcnn_RELU_at_model.py
SI_CNN_Training_and_Deployment/SI_CNN_GAP9/AE_CNN/model_dir/: Expression_Kernels.c  model.c  modelInfos.h
SI_CNN_Training_and_Deployment/SI_CNN_GAP9/AE_CNN/tensors/: Constant_decoder_deconv_0_backbone_0_0_bias.tensor  Constant_decoder_deconv_0_backbone_1_0_bias.tensor  Constant_decoder_deconv_0_upsampling_bias.tensor  Constant_decoder_deconv_1_backbone_0_0_bias.tensor  Constant_decoder_deconv_1_backbone_1_0_bias.tensor  Constant_decoder_deconv_1_upsampling_bias.tensor  Constant_decoder_deconv_2_backbone_0_0_bias.tensor  Constant_decoder_deconv_2_backbone_1_0_bias.tensor  Constant_decoder_deconv_2_upsampling_bias.tensor  Constant_decoder_deconv_3_backbone_0_0_bias.tensor  Constant_decoder_deconv_3_backbone_1_0_bias.tensor  Constant_decoder_deconv_3_upsampling_bias.tensor  Constant_encoder_conv_0_downsampling_bias.tensor  Constant_encoder_conv_0_projection_bias.tensor  Constant_encoder_conv_1_downsampling_bias.tensor  Constant_encoder_conv_1_projection_bias.tensor  Constant_encoder_conv_2_downsampling_bias.tensor  Constant_encoder_conv_2_projection_bias.tensor  Constant_encoder_conv_3_downsampling_bias.tensor  Constant_encoder_conv_3_projection_bias.tensor  Constant_onnx__conv_215.tensor  Constant_onnx__conv_218.tensor  Constant_onnx__conv_221.tensor  Constant_onnx__conv_224.tensor  Constant_onnx__conv_227.tensor  Constant_onnx__conv_230.tensor  Constant_onnx__conv_233.tensor  S17_Infos.tensor  S23_Infos.tensor  S27_Infos.tensor  S30_Infos.tensor  S30_Mul_scale.tensor  S30_Mul_shift.tensor  S33_Mul_scale.tensor  S33_Mul_shift.tensor  S36_Infos.tensor  S36_Mul_scale.tensor  S36_Mul_shift.tensor  S40_Infos.tensor  S43_Infos.tensor  (+48 more)
SI_CNN_Training_and_Deployment/SI_CNN_GAP9/AE_FC/: CMakeLists.txt  FCAutoEncoder.c  FCAutoEncoder.h  FCAutoEncoder.onnx  NNTool.py  gen_FCAutoEncoder_at_model.py
SI_CNN_Training_and_Deployment/SI_CNN_GAP9/AE_FC/model_dir/: Expression_Kernels.c  Expression_Kernels.h  model.c  modelInfos.h
SI_CNN_Training_and_Deployment/SI_CNN_GAP9/AE_FC/tensors/: S12_Mul_scale.tensor  S12_Mul_shift.tensor  S18_Mul_scale.tensor  S18_Mul_shift.tensor  S21_Mul_scale.tensor  S24_Mul_scale.tensor  S3_Infos.tensor  S3_Mul_scale.tensor  S3_Mul_shift.tensor  S6_Mul_scale.tensor  _decoder_decoder_net_decoder_net_0_gemm_biases.tensor  _decoder_decoder_net_decoder_net_3_gemm_biases.tensor  _decoder_decoder_net_decoder_net_6_gemm_weights.tensor  _encoder_encoder_net_encoder_net_0_gemm_biases.tensor  _encoder_encoder_net_encoder_net_0_gemm_weights.tensor  _encoder_encoder_net_encoder_net_3_gemm_biases.tensor  _encoder_encoder_net_encoder_net_3_gemm_weights.tensor  _encoder_encoder_net_encoder_net_6_gemm_weights.tensor
SI_CNN_Training_and_Deployment/SI_CNN_GAP9/ARMA_30_10/: ARMA_30_10_Bin_All.c  ARMA_30_10_Bin_All.h  ARMA_30_10_Bin_All.onnx  CMakeLists.txt  NNTool.py  gen_ARMA_30_10_Bin_All_at_model.py  sdk.config
SI_CNN_Training_and_Deployment/SI_CNN_GAP9/ARMA_30_10/model_dir/: Expression_Kernels.h  (+2 more)
SI_CNN_Training_and_Deployment/SI_CNN_GAP9/ARMA_50_30/: ARMA_50_30_Bin_All.c  ARMA_50_30_Bin_All.h  ARMA_50_30_Bin_All.onnx  CMakeLists.txt  NNTool.py  gen_ARMA_50_30_Bin_All_at_model.py
SI_CNN_Training_and_Deployment/SI_CNN_GAP9/FRF_ARMA/: CMakeLists.txt  FRF_multiclass_CNN.c  FRF_multiclass_CNN.h  NNTool.py  gen_FRF_multiclass_CNN_at_model.py
SI_CNN_Training_and_Deployment/SI_model/: FRF_multiclass_CNN.onnx  FRF_multiclass_CNN.pth  SI_CNN.ipynb  SI_CNN.pth  SI_CNN_FRF_10_10.ipynb  SI_CNN_FRF_20_20.ipynb  SI_CNN_multclass_modalparam.ipynb  SI_CNN_multclass_timeseries.ipynb  SI_CNN_multclass_timeseries_undersampled.ipynb  timeseries_multiclass_CNN.pth
SystemVerilog_project/: Progetto_labdig.sv  README.md  REG_BUS.sv  counter.sv  divider_serial.sv  tb_progetto_labdig.sv
VHDL_Divider/: README.md  constraints.sdc
VHDL_Divider/Progetto_Gaspari_Casadei/: Risultati_timing_power_divisore.xlsx
VHDL_Divider/Progetto_Gaspari_Casadei/divider_serial/: contatore_param.vhd  divider_serial.vhd  tb_divider_serial.vhd
VHDL_Divider/Progetto_Gaspari_Casadei/divider_serial_noreg/: divider_serial.vhd
VHDL_Divider/divider_comb/: divider.vhd  tb_divider_comb.vhd
VHDL_Divider/divider_serial_noreg/: tb_divider_serial.vhd
(+43 files in other folders)
